fixed code spacing

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -366,8 +366,8 @@ button[class*="btn"] {border: 1;}
   font-weight: 900;
   position:relative;
   border-radius: 5px; 
-  align-items: center; /* aligns the image and the text vertically in the center */
-  justify-content: center; /* space out the elements inside the button */
+  align-items: center; 
+  justify-content: center; 
 }
 
 .cta::before {
@@ -436,10 +436,6 @@ button[class*="btn"] {border: 1;}
   flex: 1 1 auto;
 }
 
-.cta.sorting:last-child {
-  margin-right: 0;
-}
-
 .cta:focus {
    outline: none; 
 }
@@ -448,15 +444,6 @@ button[class*="btn"] {border: 1;}
   /* box-shadow: 0px 0px 0px 1px #FF00FF; */
 }
 
-.cta span:nth-child(2) {
-    transition: 0.5s;
-    margin-right: 0px;
-}
-
-.cta:hover  span:nth-child(2) {
-    transition: 0.5s;
-    margin-right: 45px;
-}
 
 button:hover {
   background-color: linear-gradient(45deg, #FBC638, #FF6363, #00C6FF, #FF00FF, #FBC638);
@@ -464,20 +451,6 @@ button:hover {
   animation: AnimationName 3s ease infinite;
   -webkit-backgrxound-clip: text;
   /* -webkit-text-fill-color: transparent; */
-}
-
-.cta:hover path.three {
-    animation: color_anim 1s infinite 0.2s;
-}
-
-.cta:hover path.one {
-    transform: translateX(0%);
-    animation: color_anim 1s infinite 0.6s;
-}
-
-.cta:hover path.two {
-    transform: translateX(0%);
-    animation: color_anim 1s infinite 0.4s;
 }
 
 /** Scrolling bar */
@@ -579,18 +552,6 @@ button:hover {
   justify-content: center;
   align-items: center;
   overflow-x: auto;
-}
-
-@keyframes color_anim {
-    0% {
-        fill: white;
-    }
-    50% {
-        fill: #FBC638;
-    }
-    100% {
-        fill: white;
-    }
 }
 
 @media only screen and (max-width: 1350px) {
